Fix overflow of file input field

--- a/imp/themes/default/dynamic/screen.css
+++ b/imp/themes/default/dynamic/screen.css
@@ -815,6 +815,9 @@ span.attachmentImg {
 .RB_Form input {
     margin: .2em;
 }
+#mbox_import {
+    overflow: hidden;
+}
 
 /* Popup message styling. */
 .headercloseimg {
